# cpp-starter-kit

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  opengl_canvas_widget.cpp
cmake/: CMakePresets.json  VSWhere.cmake  WinQt5Deploy.cmake  WinQt6Deploy.cmake
libs/: .gitkeep  third_party.cmake
libs/glad/: CMakeLists.txt
src/SampleProject/: CMakeLists.txt
src/SampleProject/App/: main.cpp
src/SampleProject/GUI/Qt/: CMakeLists.txt  QtSampleProject.cpp
src/SampleProject/GUI/Qt/AboutWidget/: AboutWidget.ui
src/SampleProject/GUI/Qt/GLWidget/: GLWidget.cpp  GLWidget.hpp
src/SampleProject/GUI/Qt/MainWindow/: MainWindow.cpp  MainWindow.hpp  SampleProject.ui
src/SampleProject/GUI/Qt/RCC/: Resources.qrc
src/sample-project/: CMakeLists.txt  main.cpp
src/sample-project/cmake/: sample-project-config.cmake
src/sample-project/gui/glfw/: CMakeLists.txt
src/sample-project/gui/qt5/: CMakeLists.txt  icons.qrc  main.cpp
src/sample-project/gui/qt5/main_window/: main_window.hpp
src/sample-project/gui/qt5/opengl_canvas_widget/: opengl_canvas_widget.hpp
src/sample-project/gui/qt6/: CMakeLists.txt
src/sample-project/gui/qt6/about_widget/: about_widget_form.ui
src/sample-project/gui/qt6/cmake/: sample-project-qt6-config.cmake
src/sample-project/gui/qt6/main_window/: main_window.hpp  main_window_form.ui
src/sample-project/gui/qt6/opengl_canvas_widget/: opengl_canvas_widget.hpp
src/sample_project/: CMakeLists.txt  main.cpp
src/sample_project/gui/qt5/about_widget/: about_widget.cpp  about_widget.hpp  about_widget_form.ui
src/sample_project/gui/qt5/main_window/: main_window.cpp  main_window.hpp
src/sample_project/gui/qt5/opengl_canvas_widget/: opengl_canvas_widget.cpp  opengl_canvas_widget.hpp
src/sample_project/gui/qt5/rcc/: resources.qrc
